--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -3,7 +3,7 @@
 
 <% @blog_posts.each do |blog_post|%>
 <h2><%= link_to blog_post.title, blog_post %></h2>
- <%=blog_post.body%>
+ <%=blog_post.content%>
   <div>
     <% if blog_post.draft? %>
   <div class="p-2 rounded bg-gray-100 text-gray-900">Draft BlogPost, Not published </div>
