Add pagination for blog posts

--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -10,10 +10,15 @@
     <% elsif blog_post.scheduled? %>
   <div class="p-2 rounded bg-blue-100 text-gray-900">Schedule for: </div>
     <% end %>
-  
- 
-</div>
+  </div>
 <%end%>
+
+
+
+<%# Render a view helper in your views (skipping nav links for empty pages) %>
+<div class="my-16">
+<%== pagy_nav(@pagy) if @pagy.pages > 1 %>
+</div>
 
 
 
