--- a/app/views/blog_posts/_form.html.erb
+++ b/app/views/blog_posts/_form.html.erb
@@ -12,6 +12,12 @@
   </div>
 
   <div>
+    <%= form.label :cover_image %>
+    <%= image_tag blog_post.cover_image, class: "w-1/3" if blog_post.cover_image.present?%>
+    <%= form.file_field :cover_image %>
+  </div>
+
+  <div>
     <%= form.label :content%>
     <%= form.rich_text_area :content%>
   </div>
