--- a/app/views/blog_posts/index.html.erb
+++ b/app/views/blog_posts/index.html.erb
@@ -2,6 +2,7 @@
 
 
 <% @blog_posts.each do |blog_post|%>
+<%= image_tag blog_post.cover_image if blog_post.cover_image.present?%>
 <h2><%= link_to blog_post.title, blog_post %></h2>
  <%=blog_post.content%>
   <div>
