--- a/app/views/blog_posts/edit.html.erb
+++ b/app/views/blog_posts/edit.html.erb
@@ -1,5 +1,19 @@
 <h1> Edit Blog Post Here  </h1>
 
+<p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+    <div>
+      <% if user_signed_in? %>
+      <%= link_to "New Blog Post", new_blog_post_path %>
+        <%#= link_to "profile", edit_user_registration_path %>
+        <%= button_to "Log Out", destroy_user_session_path, method: :delete %>
+      <%# else %>
+        <%#= link_to "Login", new_user_session_path %>
+        <%#= link_to "Sign Up", new_user_registration_path %>
+      <% end %>
+    </div>
+
 
 <%=render partial: "form", locals: {blog_post: @blog_posts}%>
 
